# ward

./: .gitattributes  .gitignore  .pre-commit-hooks.yaml  .wardignore  CLAUDE.md  LICENSE  README.md  RELEASING.md  SECURITY.md  action.yml  brand-theme.css  brand.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bench.yml  ci.yml  release.yml
action/: action.yml  entrypoint.sh
benchmark/: README.md  v0.1.1-inaugural.json  v0.1.1-inaugural.md  v0.1.2.json  v0.1.2.md  v0.1.3-full.json  v0.1.3-full.md  v0.1.3-smoke.json  v0.1.3-smoke.md  v0.1.4-full.json  v0.1.4-full.md  v0.1.4-smoke.json  v0.1.4-smoke.md  v0.2.0-full.json  v0.2.0-full.md  v0.2.0-smoke.json  v0.2.0-smoke.md  v0.2.1-full.json  v0.2.1-full.md  v0.2.1-smoke.json  v0.2.1-smoke.md  v0.2.2-full.json  v0.2.2-full.md  v0.2.2-smoke.json  v0.2.2-smoke.md  v0.2.3-full.json  v0.2.3-full.md  v0.2.3-smoke.json  v0.2.3-smoke.md
docs/: launch-writeup.md
src/ward/: __init__.py  cli.py  demo.py  lab.py  lab_reviewer.py  selftest.py
src/ward/bench/: __init__.py  compare.py  corpora.py  download.py  report.py  runner.py
src/ward/bench/samples/: README.md  advbench_harmful_behaviors.jsonl  deepset_prompt_injections.jsonl  lakera_ignore_instructions.jsonl  spikee_jailbreaks.jsonl
src/ward/core/: __init__.py  engine.py  git_metadata.py  github_api.py  models.py  normalise.py  rules.py  verdict.py  wardignore.py
src/ward/detectors/: __init__.py  ai_tool_specific.py  base.py  exfiltration.py  instruction_override.py  obfuscation.py  role_manipulation.py  tool_call_injection.py
src/ward/judge/: __init__.py  anthropic_judge.py  base.py  mock.py  prompt.py
src/ward/reporters/: __init__.py  json.py  pretty.py  sarif.py
src/ward/rules/: __init__.py  ai_tool_quirks.yaml  exfiltration.yaml  instruction_overrides.yaml  multilingual.yaml  obfuscation.yaml  role_manipulation.yaml  tool_calls.yaml
tests/: conftest.py  test_bench.py  test_clean_fixtures.py  test_cli.py  test_demo.py  test_detectors.py  test_fixtures.py  test_github_api.py  test_judge.py  test_lab.py  test_lab_reviewer.py  test_normalise.py  test_reporters.py  test_scan_local.py  test_selftest.py  test_suppression.py  test_verdict.py  test_wardignore.py
tests/fixtures/: 01_branch_ignore_previous.yaml  02_pr_title_role_takeover.yaml  03_pr_body_tokenizer_tag.yaml  04_commit_message_disregard.yaml  05_filename_rtl_override.yaml  06_pr_body_zero_width.yaml  07_pr_body_fake_tool_call.yaml  08_pr_body_mcp_uri.yaml  09_branch_shell_injection.yaml  10_pr_body_webhook_exfil.yaml  11_pr_body_include_secrets.yaml  12_pr_body_dns_exfil.yaml  13_pr_body_anthropic_tags.yaml  14_pr_body_cursor_command.yaml  15_filename_ignore_instructions.yaml  16_readme_priority_escalation.yaml  17_pr_body_markdown_comment.yaml  18_pr_body_fake_system_block.yaml  19_commit_message_jailbreak.yaml  20_clean_pr.yaml  21_data_uri_in_branch.yaml  22_pr_body_fake_json_tool_call.yaml  23_base64_in_commit.yaml  24_homoglyph_cyrillic_i.yaml  25_russian_multilingual_evasion.yaml  25_russian_trivy_class.yaml  26_markdown_image_exfil.yaml  27_pretend_chat_turn.yaml  28_note_to_ai.yaml  29_telegram_exfil.yaml  30_aider_add_dotenv.yaml  31_fenced_system_block.yaml  32_chinese_ignore_previous.yaml  33_leetspeak_evasion.yaml  34_intra_word_dots.yaml  35_suppression_bypass_in_source.yaml  36_url_encoded_payload.yaml  37_html_entity_payload.yaml  38_short_base64_payload.yaml  39_all_confusable_payload.yaml  (+2 more)
tests/fixtures/clean/: README.md  c01_typo_fix.yaml  c02_feature_with_long_description.yaml  c03_docs_system_requirements.yaml  c04_security_research_with_directive.yaml  c05_chinese_localisation.yaml  c06_config_role_admin.yaml  c07_changelog_with_attack_history.yaml  c08_signed_commit_base64.yaml  c09_clean_screenshot_markdown.yaml  c10_developer_mode_browser_extension.yaml
