[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ward-scanner"
version = "0.2.2"
description = "Pre-agent metadata scanner. Catches prompt injection in branch names, commits, PR titles, and other inputs before they reach an AI code reviewer."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Craig McCart", email = "craig.mccart@outlook.com" }]
keywords = [
  "security",
  "prompt-injection",
  "ai-security",
  "appsec",
  "devsecops",
  "owasp-asi",
  "sast",
  "github-action",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-PyYAML",
]
bench-download = [
  # Only needed for downloading the parquet-formatted upstream corpora
  # (Lakera, deepset). The CSV / JSONL corpora work without this extra.
  "pyarrow>=15.0",
]
judge = [
  # Only needed for the optional LLM judge tier (`ward judge --engine anthropic`
  # and `ward bench --judge anthropic`). Ward's core is regex-only and has no
  # LLM dependency.
  "anthropic>=0.40",
]

[project.scripts]
ward = "ward.cli:app"

[project.urls]
Homepage = "https://github.com/sonofg0tham/ward"
Issues = "https://github.com/sonofg0tham/ward/issues"
Source = "https://github.com/sonofg0tham/ward"

[tool.hatch.build.targets.wheel]
packages = ["src/ward"]

[tool.hatch.build.targets.wheel.force-include]
"src/ward/rules" = "ward/rules"
"src/ward/bench/samples" = "ward/bench/samples"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/ward"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 75

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
# E501: line length is handled by formatter, not the linter.
# UP042: `class Foo(str, Enum)` is intentional - converting to `StrEnum` changes
#        `str()` output semantics and we lean on the (str, Enum) form deliberately.
ignore = ["E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
# Ward's whole purpose is detecting Cyrillic / Latin homoglyphs. Source code
# that exercises those code points cannot be made "non-ambiguous" without
# defeating the test or demo.
"src/ward/demo.py" = ["RUF001", "RUF002", "RUF003"]
"src/ward/selftest.py" = ["RUF001", "RUF002", "RUF003"]
"src/ward/detectors/obfuscation.py" = ["RUF001", "RUF002", "RUF003"]
"src/ward/core/normalise.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_detectors.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_lab.py" = ["RUF001", "RUF002", "RUF003"]
"tests/test_normalise.py" = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/ward"]

# pyarrow is an optional runtime dep (only needed for `ward bench --download`
# against parquet corpora). It's not in the [dev] extra so mypy on CI cannot
# see it. Allow the missing import so both environments pass.
[[tool.mypy.overrides]]
module = "pyarrow.*"
ignore_missing_imports = true

# anthropic is an optional runtime dep (only the LLM judge tier needs it) and
# is not in the [dev] extra, so mypy on CI cannot see it. Allow the missing
# import so both environments pass.
[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true
